--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-loader-spinner": "^6.0.0-0",
     "sass": "^1.49.11"
   },
   "devDependencies": {
